Bug fix is word-wrap: break-word;
FE:
- Pulse displays altered to allow word-wrap:breakw-word.

--- a/frontend/app/less/pulse.less
+++ b/frontend/app/less/pulse.less
@@ -43,6 +43,7 @@
     .body {
       padding:0;
       margin-bottom:16px;
+      word-wrap:break-word;
 
       .excerpt {
         padding:16px;
@@ -114,6 +115,7 @@
             line-height:1.1em;
             height:2.2em;
             text-overflow:ellipsis;
+            word-wrap:break-word;
             overflow:hidden;
           }
 
@@ -123,6 +125,7 @@
             border-top:solid 1px @pulsarTextColor;
             font-size:16px;
             line-height:1.1em;
+            word-wrap:break-word;
           }
         }
       }
@@ -130,6 +133,7 @@
       .excerpt {
         height:160px;
         overflow:auto;
+        word-wrap:break-word;
       }
 
       .prompt {
